src/components/navbar/Navbar.module.css
@import "../../vars.css";

.navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 50px;
    z-index: 2;
    margin: 0 10%;
}

.title {
    font-size: 1.5rem;
    font-weight: 600;
    text-decoration: none;
    color: #ff5722;
}

.menu {
    display: flex;
}

.menuItems {
    display: flex;
    gap: 47px;
    margin-right: -20px;
    font-size: 1.5rem;
    color: var(--color-text);
    text-decoration: none;
    list-style: none;
}

.menuItems :hover {
    color: var(--color-primary);
    transition: 0.3s;
    transform: translateY(-5px);
}

.navmenu {
    display: none;
}

/* Tablet */
@media (max-width: 1024px) {
    .title {
        font-size: 1.5rem;
    }
    .menuItems {
        font-size: 1.5rem;
    }
}

/* Large phones / small tablets */
@media screen and (max-width: 768px) {
    .navbar {
        width: 90%;
    }
    .menu {
        position: relative;
        right: 0;
        margin-right: 10%;
        flex-direction: column;
        align-items: flex-end;
        gap: 11px;
        z-index: 3;
    }
    .navmenu {
        display: block;
        cursor: pointer;
    }
    .menuItems {
        position: absolute;
        top: 100%;
        display: none;
        display: none;
        flex-direction: column;
        align-items: center;
        gap: 13px;
        border-radius: 10px;
        background: rgb(25, 55, 109);
        background: linear-gradient(0deg, rgba(25, 55, 109, 0.2) 0%, rgba(25, 55, 109, 0.2) 100%);
    }
    .menuOpen {
        display: flex;
        z-index: 1;
    }
}

